Fix alignment issue in firefox etc

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/search.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/search.scss
@@ -93,4 +93,9 @@
         @include container(10px);
         margin-top: 10px;
     }
+    .filters {
+        label {
+            vertical-align: top;
+        }
+    }
 }
